.provarCaches/00Df2000001KKNJEA4/objects/Incapfs__FieldSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Incapfs__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filter</fullName>
                    <default>true</default>
                    <label>Filter</label>
                </value>
                <value>
                    <fullName>Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incapfs__ObjectSetting__c</fullName>
        <label>Object Setting</label>
        <referenceTo>Incapfs__ObjectSetting__mdt</referenceTo>
        <relationshipName>FieldSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incapfs__Show_Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked for a field having text box as datatype. If checked, the textbox would be turned into autosuggest picklist having top 200 unique values for the field</description>
        <inlineHelpText>Should be checked for a field having text box as datatype. If checked, the textbox would be turned into autosuggest picklist having top 200 unique values for the field</inlineHelpText>
        <label>Show Picklist</label>
        <type>Checkbox</type>
    </fields>
    <label>ForceSight_Filter</label>
    <pluralLabel>Filters</pluralLabel>
</CustomObject>